# presentation-agent

./: .gitignore  AGENT_INSTALL.md  AGENT_USAGE.md  GUIDEBOOK.md  README.md  pyproject.toml  requirements-dev.txt  打开汇报助手LoopCockpit.command
.learnings/: ERRORS.md
configs/: agents.json  capabilities.json  context_requirements.json  llm.json
docs/: DEPENDENCIES.md  GUIDEBOOK.md  PACKAGE_MANIFEST.md  WorkBuddy调度速查卡.md  analysis_skill_revision_plan.md  atomic_composable_skills_architecture.md  atomic_skills_implementation_plan.md  manager_agent_development_plan.md  page_filling_v2_design.md  page_filling_v2_remediation_plan.md  schema_quickref.md  spawn_adapter_implementation_plan.md  three_layer_agent_architecture.md  插件化打包部署执行方案.md  文档优先架构迭代方案.md  汇报助手流水线质量复盘与修改方案.md  汇报助手系统简化设计方案.md  汇报助手系统设计方案.md  系统审查修正规划.md  系统框架介绍.md
evals/: README.md
presentation_agent/: __init__.py  agent_profiles.py  cli.py  cross_review.py  derive_agents.py  evidence_assets.py  failures.py  input_loader.py  io.py  launch.py  learning.py  loop.py  machine_check.py  manager.py  material_resolver.py  memory.py  memory_retrieval.py  memory_router.py  models.py  page_budget.py  pipeline.py  review.py  routing.py  skill_package.py  spawn.py  step.py  visual_evidence.py  web.py  workspace.py
scripts/: measure_prompt_budget.py  validate_atomic_architecture.py
site/: README.md  index.html  styles.css
tests/: test_agent_profiles.py  test_analysis.py  test_analysis_evidence_subtask.py  test_cli_adapter.py  test_connectors.py  test_context_assembler.py  test_default_manager_chain.py  test_llm.py  (+38 more)
(+274 files in other folders)
