[project]
name = "presentation-agent"
version = "0.1.0"
description = "Loop-first infra scaffold for a presentation assistant agent."
requires-python = ">=3.9"
dependencies = []

# Note: the LLM layer (presentation_agent/llm) is intentionally pure-stdlib.
# JSON-schema validation is implemented in-house (llm/schema.py) to keep this
# project dependency-free; do not add a jsonschema dependency without reason.

[project.scripts]
presentation-agent = "presentation_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
